# vmel

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  Makefile  README  README.md  grammar.md  install.sh
docs/html/: annotated.html  classes.html  dir_09e761304027c904456130627fd4dcf5.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  errors_8h.html  errors_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  index.html  menudata.js  nexec_8h.html  nexec_8h_source.html  node_8h.html  node_8h_source.html  parser_8h.html  parser_8h_source.html  struct_error-members.html  struct_error.html  struct_nexec_mgr-members.html  struct_nexec_mgr.html  struct_node-members.html  struct_node.html  struct_node_mgr-members.html  struct_node_mgr.html  struct_p_errors-members.html  struct_p_errors.html  struct_parser_mgr-members.html  struct_parser_mgr.html  struct_sy_table-members.html  struct_sy_table.html  struct_symbol-members.html  struct_symbol.html  struct_token-members.html  struct_token.html  struct_token_mgr-members.html  (+13 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js  variables_0.js  variables_1.js
docs/latex/: annotated.tex  errors_8h.tex  files.tex  nexec_8h.tex  node_8h.tex  parser_8h.tex  refman.tex  struct_error.tex  struct_nexec_mgr.tex  struct_node.tex  struct_node_mgr.tex  struct_p_errors.tex  struct_parser_mgr.tex  struct_sy_table.tex  struct_symbol.tex  struct_token.tex  struct_token_mgr.tex  sytable_8h.tex  tokenizer_8h.tex  tokens_8h.tex  union_syntax_node.tex  utils_8h.tex  vmel_8h.tex
include/: conf.h  errors.h  nexec.h  node.h  parser.h  sytable.h  tokenizer.h  tokens.h  utils.h
includes/: vmel.h
modules/: CMakeLists.txt  Makefile  install.sh  vstring.c
modules/include/: vstring.h
modules/src/: vstring.c
src/: errors.c  grammar.md  nexec.c  node.c  node.h  parser.c  parser.h  sytable.c  token.h  tokenizer.c  tokenizer.h  tokens.c  tokens.h  utils.c  utils.h  vmel.c  vmel.h
src/include/: errors.h  nexec.h  node.h  parser.h  sytable.h  tokenizer.h  tokens.h  utils.h
test-data/: run.1.vml  run.vml  test-errors.vml  test-types.vml
test-data/errors/: basic.vml
test-data/functions/: basic.vml
test-data/types/: basic.vml
